objects/Inspection_Field_Schema__c.object
<CustomObject>
    <description>Represents one item on the mechanical inspection checklist.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Text__c</fullName>
        <description>The text description of this field.</description>
        <label>Field Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>PassFailNote</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DrumBrake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommentOnly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <inlineHelpText>Enter any notes for how this portion of the inspection should be performed.</inlineHelpText>
        <label>Procedure</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this required for all inspections?</description>
        <inlineHelpText>Uncheck this box if this inspection item is only applicable on some cars - for instance, &quot;Moonroof operates fully.&quot; would not apply to all vehicles, and thus the box should not be checked.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <picklist>
            <picklistValues>
                <fullName>Stationary Road Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Road Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brakes &amp; Wheels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Hood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underbody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Inspection Field Schema</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field_Text__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Key__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>if1{0000}</displayFormat>
        <label>Inspection Field Schema Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Field Schemata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>